[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/fray/editor/input_map/input_inspectors/input_inspector.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/fray/editor/input_map/input_inspectors/conditional_inspector.gd" type="Script" id=2]
[ext_resource path="res://addons/fray/editor/ui/reordable_list/reordable_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/fray/assets/styles/editor_property.tres" type="StyleBox" id=4]

[node name="ConditionalInspector" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="DefaultInputProperty" type="HBoxContainer" parent="ScrollContainer/PropertyContainer" index="0"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/DefaultInputProperty" index="0"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Default Input"

[node name="DefaultInputEdit" type="LineEdit" parent="ScrollContainer/PropertyContainer/DefaultInputProperty" index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 4 )

[node name="InputByConditionProperty" type="HBoxContainer" parent="ScrollContainer/PropertyContainer" index="1"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/InputByConditionProperty" index="0"]
margin_right = 510.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Input By Condition"

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/PropertyContainer/InputByConditionProperty" index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer" index="0"]
margin_left = 5.0
margin_top = 5.0
margin_right = 505.0
margin_bottom = 61.0
size_flags_horizontal = 3

[node name="ConditionalListContainer" type="VBoxContainer" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer" index="0"]
margin_right = 500.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer/ConditionalListContainer" index="0"]
margin_right = 500.0
margin_bottom = 14.0
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer/ConditionalListContainer/HBoxContainer" index="0"]
margin_left = 104.0
margin_right = 165.0
margin_bottom = 14.0
size_flags_horizontal = 6
size_flags_stretch_ratio = 1.2
text = "Condition"

[node name="Label2" type="Label" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer/ConditionalListContainer/HBoxContainer" index="1"]
margin_left = 274.0
margin_right = 308.0
margin_bottom = 14.0
size_flags_horizontal = 2
text = "Input"

[node name="ConditionalList" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer/ConditionalListContainer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 500.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="AddConditionalButton" type="Button" parent="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer" index="1"]
margin_top = 36.0
margin_right = 500.0
margin_bottom = 56.0
text = "Add Input"

[connection signal="text_changed" from="ScrollContainer/PropertyContainer/DefaultInputProperty/DefaultInputEdit" to="." method="_on_DefaultInputEdit_text_changed"]
[connection signal="item_removed" from="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer/ConditionalListContainer/ConditionalList" to="." method="_on_ConditionalList_item_removed"]
[connection signal="pressed" from="ScrollContainer/PropertyContainer/InputByConditionProperty/PanelContainer/VBoxContainer/AddConditionalButton" to="." method="_on_AddConditionalButton_pressed"]
